src/test/ui/feature-gates/feature-gate-rustc-attrs-1.stderr
error[E0658]: the `#[rustc_variance]` attribute is just used for rustc unit tests and will never be stable
  --> $DIR/feature-gate-rustc-attrs-1.rs:3:1
   |
LL | #[rustc_variance]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error[E0658]: the `#[rustc_error]` attribute is just used for rustc unit tests and will never be stable
  --> $DIR/feature-gate-rustc-attrs-1.rs:4:1
   |
LL | #[rustc_error]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error[E0658]: the `#[rustc_nonnull_optimization_guaranteed]` attribute is just used to enable niche optimizations in libcore and will never be stable
  --> $DIR/feature-gate-rustc-attrs-1.rs:5:1
   |
LL | #[rustc_nonnull_optimization_guaranteed]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
